--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic/angular": "^4.11.10",
-    "cordova-android": "7.0.0",
+    "cordova-android": "^8.1.0",
     "cordova-plugin-advanced-http": "^2.4.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
